--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <h1 class="title">Etch-a-Sketch</h1>
+
+    <div id="container">
+
+    </div>
 
 
 
