--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <h1 class="title">Etch-a-Sketch</h1>
-
-    <div id="container">
-
+    <div class="flex-container">
+        <div class="title"><h1>Etch-a-Sketch</h1></div>
+        <div class="content">
+            <div class="board"></div>
+            <div class="buttons">
+                <button class="game-button" onclick="changeColor('black')">Black</button>
+                <button class="game-button" onclick="changeColor('white')">Eraser</button>
+                <button class="game-button" onclick="changeColor('random')">Random</button>
+                <button class="game-button" onclick="resetBoard()">Reset</button>
+            </div>
+        </div>
+        <div class="set-size">
+            <input type="text" placeholder="Choose a size." value="16" onchange="changeSize(this.value)">
+            <button class="change-size">Set Size</button>
+        </div>
     </div>
 
 
